Closed
Bug 588692
Opened 15 years ago
Closed 15 years ago
if we can't paint with widget layers, don't try to
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
People
(Reporter: tnikkel, Assigned: tnikkel)
References
Details
Attachments
(1 file, 1 obsolete file)
1.37 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
As bug 587539 shows PaintFrame can be called without a widget, so the assertion at the start of the function fires. This causes some mac reftests with plugins to fail. I added this assertion recently, so I think we should just make it a warning.
Attachment #467318 -
Flags: review?(roc)
How about removing USE_WIDGET_LAYERS in this case to ensure that the rendering still works?
Assignee | ||
Comment 2•15 years ago
|
||
Okay, let's do that.
Assignee: nobody → tnikkel
Attachment #467318 -
Attachment is obsolete: true
Attachment #467331 -
Flags: review?(roc)
Attachment #467318 -
Flags: review?(roc)
Attachment #467331 -
Flags: review?(roc) → review+
Assignee | ||
Updated•15 years ago
|
Summary: assertion in nsLayoutUtils::PaintFrame should be warning → if we can't paint with widget layers, don't try to
Assignee | ||
Comment 3•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•