Bug 588692. If we can't paint with widget layers, don't try to. r=roc